# edgar-link

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAPPING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: constants.py
data/: sec_tag_mapping.source.json
edgar/: filing_retrieval.py
edgar/market_data/: yahoo.py
edgar/metrics/: _bs_prefilter.py  _cf_prefilter.py  _concepts.py  _filing_structure.py  _slot_selection.py  _statement_taxonomy.py  beta.py  derived_lines.py  ltm.py  ratios.py  statement_buildup.py
edgar_mcp/: server.py
scripts/: build_comps.py  update_sec_tag_mapping.py
skills/edgar-link-financials/: SKILL.md
skills/edgar-link-financials/references/: metrics-catalog.md  troubleshooting.md
tests/: test_build_comps.py
utils/: cache.py  validators.py
