[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-connect"
version = "0.1.0"
description = "Analyst-grade SEC EDGAR financials: XBRL pull plus a vendor-comparable normalized metric/comps/beta engine, with an MCP server"
# Source floor: the code uses no 3.11-only constructs. The pinned
# dependency set and the hash-verified clean-room/CI path are currently
# validated on Windows / CPython 3.11 (see requirements.lock and
# .github/workflows/ci.yml); a lower interpreter is source-compatible
# but not lock-verified during the active supply-chain incident.
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    # Pinned to releases uploaded BEFORE 2026-05-11 (Mini Shai-Hulud disclosure).
    # Verified against PyPI release history. Do not bump without re-verifying
    # the version's upload date is outside the incident window.
    "httpx==0.28.1",         # 2024-12-06
    "pandas==3.0.2",         # 2026-03-31  (3.0.3 was uploaded on incident day)
    "XlsxWriter==3.2.9",     # 2024-12-19
    "tabulate==0.9.0",       # 2022-10-06  (conservative; 0.10.0 broke a 4-yr dormancy)
    "openpyxl==3.1.5",       # 2024-06-28
    "beautifulsoup4==4.14.3",# 2025-11-30
    "lxml==6.1.0",           # 2026-04-17
    "jsonschema==4.26.0",    # 2024-12-19
    # --- explicit transitive pins (override pip auto-resolution) ---
    "idna==3.11",            # 2025-10-12  (httpx transitive; 3.14/3.15 fell inside disclosure window)
    "numpy==2.4.4",          # 2026-03-29  (pandas transitive; 2.4.6 dropped 2026-05-18, in-window)
]

[project.optional-dependencies]
dev = [
    # Pinned to releases uploaded BEFORE the Mini Shai-Hulud phase-1
    # staging wave (2026-04-29), consistent with the runtime pin policy
    # above. The incident ran in two waves: 2026-04-29 and 2026-05-11.
    "pytest==8.4.2",         # 2025-09-04  (latest 8.x; ~8 months pre-incident margin)
    # --- explicit transitive pins (override pip auto-resolution) ---
    "packaging==25.0",       # 2025-04-19  (pytest transitive; 26.2 landed 2026-04-24, only 5 days before phase-1 staging)
]
mcp = [
    "mcp==1.27.1",                # 2026-05-08  (last release before Mini Shai-Hulud disclosure)
    # --- explicit transitive pins (pip auto-resolution picked in-window versions) ---
    "sse-starlette==3.4.2",       # 2026-05-06  (3.4.4 was uploaded on incident day 2026-05-12)
    "python-multipart==0.0.27",   # 2026-04-27  (0.0.28 dropped 1 day pre-disclosure)
    "uvicorn==0.46.0",            # 2026-04-23  (mcp transitive; 0.47.0 dropped 2026-05-14, in-window)
    "click==8.3.3",               # 2026-04-22  (uvicorn transitive; 8.4.0 dropped 2026-05-17, in-window)
]

[project.scripts]
edgar-search = "main:main"
edgar-mcp = "edgar_mcp.__main__:mcp.run"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["edgar*", "edgar_mcp*", "config*", "utils*"]
