[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-link"
version = "0.1.2"
description = "Analyst-grade SEC EDGAR financials: XBRL pull plus a vendor-comparable normalized metric/comps/beta engine, with an MCP server"
# Floor matches the pinned dependency reality: pandas==3.0.2 and
# numpy==2.4.4 both require >=3.11, so the package cannot install on a
# lower interpreter. Lowering this requires a separately generated and
# audited 3.10-compatible dependency set + CI validation first.
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["sec", "edgar", "xbrl", "financials", "valuation", "comps", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Pinned to releases uploaded BEFORE 2026-05-11 (Mini Shai-Hulud disclosure).
    # Verified against PyPI release history. Do not bump without re-verifying
    # the version's upload date is outside the incident window.
    "httpx==0.28.1",         # 2024-12-06
    "pandas==3.0.2",         # 2026-03-31  (3.0.3 was uploaded on incident day)
    "XlsxWriter==3.2.9",     # 2024-12-19
    "tabulate==0.9.0",       # 2022-10-06  (conservative; 0.10.0 broke a 4-yr dormancy)
    "openpyxl==3.1.5",       # 2024-06-28
    "beautifulsoup4==4.14.3",# 2025-11-30
    "lxml==6.1.0",           # 2026-04-17
    "jsonschema==4.26.0",    # 2024-12-19
    # --- explicit transitive pins (override pip auto-resolution) ---
    # idna: held at 3.11 (httpx transitive). GHSA-65pc-fj4g-8rjx /
    # CVE-2026-45409 (idna.encode bypass of CVE-2024-3651) applies to
    # <3.15, but the patched 3.15 was uploaded 2026-05-12 — one day
    # after the Mini Shai-Hulud disclosure wave, and 3.12 / 3.13 / 3.14
    # / 3.15 all shipped in a 4-week cluster around the incident
    # window, well outside idna's normal release cadence. The
    # vulnerable code path (idna.encode on attacker-controlled
    # hostnames) is not reachable from this codebase — only hardcoded
    # SEC and Yahoo Finance endpoints are contacted. Dependabot alert
    # dismissed as tolerable_risk; revisit when a post-window release
    # with normal-cadence margin is available.
    "idna==3.11",            # 2025-10-12
    "numpy==2.4.4",          # 2026-03-29  (pandas transitive; 2.4.6 dropped 2026-05-18, in-window)
]

[project.optional-dependencies]
dev = [
    # Pinned to releases uploaded BEFORE the Mini Shai-Hulud phase-1
    # staging wave (2026-04-29), consistent with the runtime pin policy
    # above. The incident ran in two waves: 2026-04-29 and 2026-05-11.
    "pytest==9.0.3",         # 2026-04-07  (CVE-2025-71176 tmpdir fix; uploaded 22 days pre-staging wave)
    # --- explicit transitive pins (override pip auto-resolution) ---
    "packaging==25.0",       # 2025-04-19  (pytest transitive; 26.2 landed 2026-04-24, only 5 days before phase-1 staging)
]
mcp = [
    "mcp==1.27.1",                # 2026-05-08  (last release before Mini Shai-Hulud disclosure)
    # --- explicit transitive pins (pip auto-resolution picked in-window versions) ---
    "sse-starlette==3.4.2",       # 2026-05-06  (3.4.4 was uploaded on incident day 2026-05-12)
    "python-multipart==0.0.27",   # 2026-04-27  (0.0.28 dropped 1 day pre-disclosure)
    "uvicorn==0.46.0",            # 2026-04-23  (mcp transitive; 0.47.0 dropped 2026-05-14, in-window)
    "click==8.3.3",               # 2026-04-22  (uvicorn transitive; 8.4.0 dropped 2026-05-17, in-window)
]

[project.urls]
Homepage = "https://github.com/jibarix/edgar-link"
Repository = "https://github.com/jibarix/edgar-link"
Releases = "https://github.com/jibarix/edgar-link/releases"
Issues = "https://github.com/jibarix/edgar-link/issues"

[project.scripts]
edgar-search = "main:main"
edgar-mcp = "edgar_mcp.__main__:mcp.run"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["edgar*", "edgar_mcp*", "config*", "utils*"]
